# llm-token-harness

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml  deploy-dashboard.yml  pages.yml
data/tasks/: search_agent_v1.json
docs/: adjudication-2026-06-12.md
docs/superpowers/specs/: 2026-06-13-cpc-dashboard-redesign-design.md
src/: cli.py  eval_runner.py  pricing.py  scorer.py  tasks.py  tools.py
src/adapters/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
tests/: test_adapters.py  test_aggregate_reps.py  test_anthropic_adapter.py  test_dataset.py  test_eval_runner.py  test_message_conversion.py  test_pricing.py  test_scorer.py  test_task_loading.py  test_tools.py
viz/: README.md  aggregate_reps.py  build_visualizer.py  dashboard.html  deploy_pages.sh  export_bench_data.py  hardening-roadmap-2026-06-12.md  insights-2026-06-12-r2.md  insights-2026-06-12.md  insights-framework-cpc.md  pages-index.html  visualizer.html
viz/data/: bench_data_2026-06-12-r2.json  reps_2026-06-13.json  runs.json
viz/data/runs/: 2026-06-12-r2.json  2026-06-12.json
