[project]
name = "llm-token-harness"
version = "0.2.0"
requires-python = ">=3.12"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = ["live: tests that hit live APIs or local services"]

[tool.ruff]
extend-exclude = [
    "src/adapter.py",
    "src/runner.py",
    "src/suites.py",
    "src/trial.py",
    "src/result_logger.py",
    "utils/",
    "main.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
